refactor(user-service): refactor tests due to broken mocks